--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
     background-image: url('../project-02/images/Construtora-Carvalho-Junior.png');
     background-size: 100% auto;
     background-repeat: no-repeat;
-    background-color: pink;
+    /*background-color: pink;*/
 }
 
 .cover-form{
